--- a/templates/zookeeper.properties.j2
+++ b/templates/zookeeper.properties.j2
@@ -1,2 +1,8 @@
-dataDir=/opt/zookeeper/data
+
+dataDir=/var/lib/zookeeper
 clientPort=2181
+initLimit=5
+syncLimit=2
+server.1={{ hostvars['zookeeper_cluster'][0].ansible_host }}:2888:3888
+server.2={{ hostvars['zookeeper_cluster'][1].ansible_host }}:2888:3888
+server.3={{ hostvars['zookeeper_cluster'][1].ansible_host }}:2888:3888
